--- a/.lh/.gitignore.json
+++ b/.lh/.gitignore.json
@@ -3,11 +3,15 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 0,
+            "activePatchIndex": 1,
             "patches": [
                 {
                     "date": 1697534068971,
                     "content": "Index: \n===================================================================\n--- \n+++ \n"
+                },
+                {
+                    "date": 1697534118120,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,1 +1,2 @@\n node_modules\n+.lh\n\\ No newline at end of file\n"
                 }
             ],
             "date": 1697534068970,
